<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="settings_title">Настройки</string>
    <string name="night">Темная тема</string>
    <string name="share">Поделится приложением</string>
    <string name="write">Написать в поддержку</string>
    <string name="contract">Пользовательское соглашение</string>




</resources>