<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginStart="64dp"
        android:layout_marginTop="14dp"
        android:gravity="top"
        android:letterSpacing="0"
        android:text="@string/settings_title"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="normal"
        app:iconPadding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="?selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back"
        tools:ignore="ContentDescription,MissingConstraints" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="14dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,RtlSymmetry">

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="match_parent"
            android:text="@string/night"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:letterSpacing="0"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:letterSpacing="0"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            app:drawableRightCompat="@drawable/share" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:letterSpacing="0"
            android:text="@string/write"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            app:drawableRightCompat="@drawable/support2"/>

        <TextView
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:letterSpacing="0"
            android:text="@string/contract"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            app:drawableRightCompat="@drawable/arrow_forward" />


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
