<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/playlist_maker"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:letterSpacing="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:layout_editor_absoluteX="16dp">

        <FrameLayout
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ripple_background"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/vector"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:letterSpacing="0"
                app:cornerRadius="20dp"
                app:icon="@drawable/settings"
                app:iconTint="@color/black"
                android:drawablePadding="10dp"
                />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/media_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/ripple_background"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/music"
                android:text="@string/media"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:letterSpacing="0"
                app:cornerRadius="16dp"
                app:icon="@drawable/settings"
                app:iconTint="@color/black"
                android:drawablePadding="10dp"
                />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/settings_button_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/ripple_background"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/settings"
                android:text="@string/settings"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:letterSpacing="0"
                app:cornerRadius="16dp"
                app:icon="@drawable/settings"
                app:iconTint="@color/black"
                android:drawablePadding="10dp"
                />

        </FrameLayout>




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>